Using modern Java features